--- a/.gitmodules
+++ b/.gitmodules
@@ -20,8 +20,11 @@
 	path = libraries/om
 	url = https://github.com/omcljs/om.git
 [submodule "applications/frontend"]
-	path = applications/frontend
+	path = applications/circleci-frontend
 	url = https://github.com/circleci/frontend.git
 [submodule "applications/precursor"]
 	path = applications/precursor
 	url = https://github.com/PrecursorApp/precursor.git
+[submodule "applications/asciinema-player"]
+	path = applications/asciinema-player
+	url = https://github.com/asciinema/asciinema-player.git
