--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "applications/unravel"]
 	path = applications/unravel
 	url = https://github.com/Unrepl/unravel.git
+[submodule "libraries/dommy"]
+	path = libraries/dommy
+	url = https://github.com/plumatic/dommy.git
